--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Curriculo Bitae de Christopher Segura Soto</title>
     <meta charset="utf-8">
     <meta name="Christopher Segura Soto" content="Curriculo Viatae web">
-    <meta name="description" content="Continuar mi formación profesional en una empresa, mientras culmino mi estudio que valore mi trayectoria">
+    <meta name="description" content="Curriculo">
     <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
     <script src='main.js'></script>
 </head>
@@ -39,7 +39,8 @@
     <div class="divObje">
         <h2 id="subti">Objetivo.</h2>
         <p id="parra">Continuar mi formación profesional en una empresa, mientras culmino mi estudio que valore mi trayectoria y 
-            me brinde las oportunidades necesarias para poner a prueba mis talentos y crecer aún más dentro de un conjunto profesional de excelencia.</p>
+            me brinde las oportunidades necesarias para poner a prueba mis talentos y crecer aún más dentro de un conjunto profesional de 
+            excelencia.</p>
         
         <h2 id="subti">Formación académica</h2>
         <table class="hola">
@@ -98,15 +99,17 @@
                <div id="parra">
                     <ol  type="i">
                         <li>Responsable del funcionamiento idóneo de los equipos de cómputo de la empresa y también instalación de softwares.
-                        <li>Reparación y atención de soporte interno de la empresa con sistema de tiquetes y respuesta rápida y asertiva a los problemas internos de equipos de computo.
+                        <li>Reparación y atención de soporte interno de la empresa con sistema de tiquetes y respuesta rápida y asertiva a 
+                            los problemas internos de equipos de computo.
                         <li>Reparación y diagnóstico de impresoras.
                     </ol>
                 </div>
             <h3><li>Reparación de computadoras.</h3>
                 <div id="parra">
                     <ol  type="i">
-                       <li>Reparación y mantenimiento de computadoras e instalación de licencias de software y soporte para los mismos casi 4 años de experiencia 
-                           mantenimiento preventivo de impresoras domesticas e impresora láser en free con oportunidad de aprender 
+                       <li>Reparación y mantenimiento de computadoras e instalación de licencias de software y soporte para los mismos 
+                           casi 4 años de experiencia mantenimiento preventivo de impresoras domesticas e impresora láser en free con
+                           oportunidad de aprender 
                     </ol>
                 </div>
             <h3><li>Asesoría de redes.</h3>
@@ -115,20 +118,21 @@
                         <li>Instalación de una red domestica para domótica con cableado estructurado para empresa pequeña.
                     </ol>
                 </div> 
-            <h3><li>Tutorías de cursos los cuales ya e aprobado.</h3>
+            <h3><li>Tutorías de cursos los cuales ya he aprobado.</h3>
                 <div id="parra">
                     <ol  type="i">
-                        <li>E brindado tutorías en los cursos que ya e aprobado y ayudando a compañeros a reforzar conocimientos.
+                        <li>He brindado tutorías en los cursos que ya he aprobado y ayudando a compañeros a reforzar conocimientos.
                     </ol>
                 </div>
             <h3><li>It support mantenimiento de computadoras y servidores.</h3>
                 <div id="parra">
                     <ol  type="i">
                         <li>Instalación de cableado estructurado.
-                        <li>Instalación de equipos y activedirectory ingresos al dominio.
-                        <li>Programación en C#.NET el cual era un proyecto para las vacaciones de la empresa y al mismo tiempo realice una pequeña base de datos en microsoft SQL server.
+                        <li>Instalación de equipos y Active Directory ingresos al dominio.
+                        <li>Programación en C#.NET el cual era un proyecto para las vacaciones de la empresa y al mismo 
+                            tiempo realice una pequeña base de datos en Microsoft SQL server.
                         <li>Colabore con un mapeo de red para definir las IP estáticas y dinámicas.
-                        <li>Resolución de tiquetes con el sistema de gira a nivel local y remoto con teamviewer.
+                        <li>Resolución de tiquetes con el sistema de gira a nivel local y remoto con TeamViewer.
                         <li>Instalación de raspberry pi.
                         <li>Solución de problemas a impresoras                                         
                     </ol>
