--- a/InfoPresonal.html
+++ b/InfoPresonal.html
@@ -52,7 +52,7 @@
     </head>
 
     <body style="background-color: #d7d7d7;">
-        <button onclick="window.location.href = 'index.html'" >Regresar a principal</button><br/>
+        <button onclick="window.location.href = 'index.html'">Regresar a principal</button><br/>
         <H1>Informacion Personal </H1>
           <hr> </br><br/>
 
@@ -67,42 +67,44 @@
                 
                 <th><h5>Palenque</h5></th>
                 <th><img src="media/HALO.jpeg"><h5>Halo</h5> 
-                    <p>Se centra en la lucha de la humanidad contra una alianza de razas alienígenas conocida como el Covenant y protejer los anillos de Halo</p>
+                    <p>Se centra en la lucha de la humanidad contra una alianza de razas alienígenas conocida como el Covenant y
+                        protejer los anillos de Halo</p>
                     <a href="https://www.halowaypoint.com/en"target="_blank">Mas Informacion</a>
                 </th>
 
             </tr> 
             
             <tr>
-                <th><h5>Parque Nacional Voalcan Poas</h5> </th>
+                <th><h5>Parque Nacional Volcán Poas</h5> </th>
                 <th><h5>Novillo Alegre</h5></th>
                 <th><img src="media/toms.webp"><h5>Tom Clancy's Rainbow Six Siege</h5></br>
-                    <p> Es un juego de disparos en primera persona táctico que consiste en 5 defensores y 5 atacantes en efender sona, bombas</p>
-                    </br><a href="https://www.ubisoft.com/en-us/game/rainbow-six/siege" target="_blank">Mas Informacion</a>
+                    <p> Es un juego de disparos en primera persona táctico que consiste en 5 defensores y 5 atacantes en defender zona,
+                        bombas</p>
+                    </br><a href="https://www.ubisoft.com/en-us/game/rainbow-six/siege" target="_blank">Mas Información</a>
                 </th>
             </tr> 
             <tr>
                 <th><h5>Playas Santa Teresa</h5> </th>
                 <th><h5>Restaurante Doña Tina</h5></th>
                 <th><img src="media/battle.jpeg"><h5>Battlefield</h5></br>
-                     Es un juego de disparos en primera persona de 64 contra 64 en esenarios de guerras
-                    </br><a href="https://www.ea.com/games/battlefield" target="_blank">Mas Informacion</a>
+                     Es un juego de disparos en primera persona de 64 contra 64 en escenarios de guerras
+                    </br><a href="https://www.ea.com/games/battlefield" target="_blank">Mas Información</a>
                 </th>
             </tr> 
             <tr>
-                <th><h5>Playas Montesuma</h5> </th>
-                <th><h5>Burguer King</h5></th>
+                <th><h5>Playas Montezuma</h5> </th>
+                <th><h5>Búrguer King</h5></th>
                 <th><img src="media/gta.jpeg"><h5>Grand Theft Auto V</h5>
-                     <p>Es un juego de disparos en primera persona simula la vida de malechor venta de droga y tratar que el govirno y
-                      la policia no nos encuentre y realizar atracos a bancos y istalaciones guvernamentales</p>
-                    </br><a href="https://www.rockstargames.com/gta-v" target="_blank">Mas Informacion</a>
+                     <p>Es un juego de disparos en primera persona simula la vida de malhechor venta de droga y tratar que el gobierno y
+                      la policía no nos encuentre y realizar atracos a bancos y instalaciones gubernamentales</p>
+                    </br><a href="https://www.rockstargames.com/gta-v" target="_blank">Mas Información</a>
                 </th>
             <tr>
                 <th><h5>La Fortuna De San Carlos</h5> </th>
-                <th><h5>Henrr´s pizza</h5></th>
+                <th><h5>Henry´s pizza</h5></th>
                 <th><img src="media/des.jpeg"><h5>Destiny 2</h5></br>
                      <p>Es un juego de disparos en primera persona en el espacio que se trata de defender al viajero y luchar 
-                     contra la colmena cabals, una casa de caidos, los repudiados y la oscuridad.</p>
+                     contra la colmena Imperio cabal, una casa de caídos, los repudiados y la oscuridad.</p>
                     </br><a href="https://www.bungie.net/7/es/Destiny/NewLight" target="_blank">Mas Informacion</a>
                 </th>
             </tr> 
