--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Curriculo Bitae de Christopher Segura Soto</title>
+    <title>Curriculo Vitae de Christopher Segura Soto</title>
     <meta charset="utf-8">
     <meta name="Christopher Segura Soto" content="Curriculo Viatae web">
     <meta name="description" content="Curriculo">
@@ -14,7 +14,6 @@
         <img id="image" src="media/chris.png" alt="hola">
         <H1 id="enca_1">Christopher Gerardo Segura Soto</H1>
         <hr> <br/> 
-    /
     <div class="fuente">
         <table class="hola">
             <tr class="hola" style="background-color: #004d1a; color: #d7d7d7;">
