--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Curriculo Vitae de Christopher Segura Soto</title>
+    <title>Curriculo Vitae De Christopher Segura Soto</title>
     <meta charset="utf-8">
     <meta name="Christopher Segura Soto" content="Curriculo Viatae web">
     <meta name="description" content="Curriculo">
