--- a/InfoPresonal.html
+++ b/InfoPresonal.html
@@ -68,8 +68,8 @@
                 <th><h5>Palenque</h5></th>
                 <th><img src="media/HALO.jpeg"><h5>Halo</h5> 
                     <p>Se centra en la lucha de la humanidad contra una alianza de razas alienígenas conocida como el Covenant y
-                        protejer los anillos de Halo</p>
-                    <a href="https://www.halowaypoint.com/en"target="_blank">Mas Informacion</a>
+                        protejer los anillos de Halo
+                    <a href="https://www.halowaypoint.com/en"target="_blank">Mas Informacion</a></p>
                 </th>
 
             </tr> 
@@ -79,16 +79,16 @@
                 <th><h5>Novillo Alegre</h5></th>
                 <th><img src="media/toms.webp"><h5>Tom Clancy's Rainbow Six Siege</h5></br>
                     <p> Es un juego de disparos en primera persona táctico que consiste en 5 defensores y 5 atacantes en defender zona,
-                        bombas</p>
-                    </br><a href="https://www.ubisoft.com/en-us/game/rainbow-six/siege" target="_blank">Mas Información</a>
+                        bombas
+                    </br><a href="https://www.ubisoft.com/en-us/game/rainbow-six/siege" target="_blank">Mas Información</a></p>
                 </th>
             </tr> 
             <tr>
                 <th><h5>Playas Santa Teresa</h5> </th>
                 <th><h5>Restaurante Doña Tina</h5></th>
                 <th><img src="media/battle.jpeg"><h5>Battlefield</h5></br>
-                     Es un juego de disparos en primera persona de 64 contra 64 en escenarios de guerras
-                    </br><a href="https://www.ea.com/games/battlefield" target="_blank">Mas Información</a>
+                     <p>Es un juego de disparos en primera persona de 64 contra 64 en escenarios de guerras
+                    </br><a href="https://www.ea.com/games/battlefield" target="_blank">Mas Información</a></p>
                 </th>
             </tr> 
             <tr>
@@ -96,8 +96,8 @@
                 <th><h5>Búrguer King</h5></th>
                 <th><img src="media/gta.jpeg"><h5>Grand Theft Auto V</h5>
                      <p>Es un juego de disparos en primera persona simula la vida de malhechor venta de droga y tratar que el gobierno y
-                      la policía no nos encuentre y realizar atracos a bancos y instalaciones gubernamentales</p>
-                    </br><a href="https://www.rockstargames.com/gta-v" target="_blank">Mas Información</a>
+                      la policía no nos encuentre y realizar atracos a bancos y instalaciones gubernamentales
+                    </br><a href="https://www.rockstargames.com/gta-v" target="_blank">Mas Información</a></p>
                 </th>
             <tr>
                 <th><h5>La Fortuna De San Carlos</h5> </th>
