--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                 <th class="hola">Informacion Personal</th>              
             </tr>
             <tr class="hola">
-                <th class="hola">Alajuela, Coyol</th>
+                <th class="hola">San Jose</th>
                 <th class="hola">85251048</th>
-                <th class="hola">crisgeseso@gmail.com</th>
+                <th class="hola">cris123@gmail.com</th>
                 <th class="hola"><button onclick="window.location.href = 'InfoPresonal.html'">Informacion Personal</button></th>  
                            
             </tr> 
